# swengine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  LICENSE  LICENSE.txt  README.md  conanfile.txt
sources/: CMakeLists.txt  Config.pri  StarWind.pro  main.cpp
sources/DemoApp/: DemoApp.pro  main.cpp
sources/DemoApp/Core/: DemoApplication.cpp  DemoApplication.h
sources/DemoApp/Game/: PlayerComponent.cpp
sources/DemoApp/Game/Screens/: GameScreen.cpp  MainMenuScreen.cpp  MainMenuScreen.h
sources/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Engine.pro  Math.h  ServiceLocator.cpp  ServiceLocator.h  assertions.h  config.h  main.cpp  options.h  precompiled.cpp  precompiled.h  swdebug.h  types.h
sources/Engine/Components/ConfigManager/: ConfigManager.cpp  ConfigManager.h
sources/Engine/Components/Debugging/: Log.cpp  Log.h  Logger.cpp  Logger.h  TimeMeter.cpp  TimeMeter.h
sources/Engine/Components/ECS/: BaseEventsListener.h  ComponentHandle.h  ComponentInstance.h  ECS.h  EventsListener.h  GameObject.h  GameObjectImpl.h  GameObjectsComponentsIterator.h  GameObjectsComponentsIteratorImpl.h  GameObjectsComponentsView.h  GameObjectsComponentsViewImpl.h  GameObjectsSequentialIterator.cpp  GameObjectsSequentialIterator.h  GameObjectsSequentialView.cpp  GameObjectsSequentialView.h  (+4 more)
sources/Engine/Exceptions/: EngineException.cpp  EngineException.h  EngineRuntimeException.cpp  EngineRuntimeException.h  NotImplementedException.cpp  NotImplementedException.h  TraceHelpers.h  exceptions.h
sources/Engine/InputManager/: InputManager.cpp  InputManager.h
sources/Engine/Renderer/: OpenGL3.h  OpenGL3Color.h  OpenGL3Renderer.cpp  OpenGL3Renderer.h  OpenGL3Shader.cpp  OpenGL3Shader.h  OpenGL3Sprite.cpp  OpenGL3Sprite.h  OpenGL3Texture.cpp  OpenGL3Texture.h  OpenGL3Window.cpp  OpenGL3Window.h
sources/Engine/ResourceManager/: ResourceManager.cpp  ResourceManager.h
sources/Engine/Utility/: Bitmask.h  DataArchive.h  DynamicObjectsPool.cpp  DynamicObjectsPool.h  InputDataArchive.cpp  InputDataArchive.h  OutputDataArchive.cpp  OutputDataArchive.h  TypeIdentifier.h  containers.cpp  containers.h  files.cpp  files.h  helpers.h  memory.h  numbers.cpp  numbers.h  strings.cpp  strings.h  types_reflection.h  xml.cpp  xml.h
sources/Engine/Utils/: Utils.cpp  Utils.h  algorithms.h  files.cpp  files.h  io.cpp  io.h  string.cpp  string.h  time.cpp  time.h  typeid.h
sources/Engine/utils/: Random.h  SGLog.cpp  SGLog.h  utils.h
sources/Game/: Application.cpp  Application.h  Asteroid.cpp  Asteroid.h  AsteroidsController.cpp  AsteroidsController.h  BaseApplication.cpp  BaseApplication.h  BaseGame.cpp  BaseGame.h  CMakeLists.txt  CameraController.cpp  CameraController.h  Entity.cpp  Entity.h  FreeCameraController.cpp  FreeCameraController.h  Game.cpp  Game.h  Game.pro  GameObject.cpp  GameObject.h  InputController.cpp  InputController.h  LevelScene.cpp  LevelScene.h  MainMenu.cpp  MainMenu.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  PlayerSpaceshipController.cpp  PlayerSpaceshipController.h  SolidGameObject.cpp  SolidGameObject.h  Spaceship.cpp  Spaceship.h  SpaceshipController.cpp  SpaceshipController.h  (+5 more)
sources/Game/Console/: Console.cpp  Console.h  ConsoleCommandsHandler.cpp  ConsoleCommandsHandler.h  ConsoleLogger.cpp  ConsoleLogger.h  GUIConsoleWidget.cpp  GUIConsoleWidget.h
sources/Game/Core/: GameApplication.cpp  GameApplication.h
sources/Game/Debugging/: TimeMeter.cpp  TimeMeter.h
sources/Game/Exceptions/: FatalErrorException.cpp  FatalErrorException.h
sources/Game/Framework/: BaseApplication.cpp  BaseApplication.h
sources/Game/Game/: Book.h  FreeCameraControlSystem.cpp  FreeCameraControlSystem.h  Game.cpp  Game.h  GameLevel.cpp  GameLevel.h  GameObjectsStore.cpp  GameObjectsStore.h  InfoportionsStore.cpp  InfoportionsStore.h  PlayerComponent.cpp  PlayerComponent.h  PlayerControlSystem.cpp  PlayerControlSystem.h
sources/Game/Graphics/: AnimationLoader.cpp  AnimationLoader.h  DefaultMaterial.cpp  DefaultMaterial.h  GraphicsPipelineState.cpp  GraphicsPipelineState.h  LevelRenderer.cpp  LevelRenderer.h  Light.cpp  Light.h  Material.cpp  Material.h  Renderable.cpp  Renderable.h  SolidMesh.cpp  SolidMesh.h  SolidMeshLoader.cpp  SolidMeshLoader.h
sources/Game/States/: MainMenuState.cpp  MainMenuState.h  PlayState.cpp  PlayState.h  State.cpp  State.h  StateManager.cpp  StateManager.h
sources/LevelEditor/: LevelEditor.cpp  LevelEditor.h  LevelEditor.ui  main.cpp
sources/LevelEditor/Config/: filesystem.h
sources/LevelEditor/Core/: Serializable.cpp  Serializable.h  XMLSerializable.h
sources/LevelEditor/UI/: Viewport.cpp  Viewport.h  ViewportWidget.cpp  ViewportWidget.h
sources/MeshTool/: AnimationExporter.cpp  AnimationExporter.h  AnimationImporter.cpp  AnimationImporter.h  AssetsDump.cpp  AssetsDump.h  AssimpMeshLoader.cpp  AssimpMeshLoader.h  CMakeLists.txt  CollisionsExporter.cpp  CollisionsExporter.h  CollisionsImporter.cpp  CollisionsImporter.h  MeshExporter.cpp  MeshExporter.h  MeshImporter.cpp  MeshImporter.h  MeshTool.cpp  MeshTool.pro  MeshToolApplication.cpp  MeshToolApplication.h  RawScene.h  SceneExporter.cpp  SceneExporter.h  SceneImporter.cpp  SceneImporter.h  SkeletonExporter.cpp  SkeletonExporter.h  SkeletonImporter.cpp  SkeletonImporter.h  utils.h
sources/Tests/: CMakeLists.txt  Tests.pro  main.cpp
sources/Tests/utility/: ecsUtility.h  resourcesUtility.h  streamsUtility.h
sources/Tests/utils/: utils.cpp  utils.h
(+833 files in other folders)
